--- a/client/login/login.css
+++ b/client/login/login.css
@@ -109,6 +109,13 @@
     z-index: 2;
 }
 
+.error {
+    font-size: 1.2rem;
+    font-weight: 500;
+    margin-bottom: -3vh;
+    color: #dc3545;
+}
+
 .phone_button {
     width: 1.5rem;
     height: 1.5rem;
