--- a/client/messages/messages.css
+++ b/client/messages/messages.css
@@ -126,6 +126,27 @@
     margin-top: 0.1rem;
     border-radius: 20px;
     padding: 1rem;
+    cursor: pointer;
+}
+
+.dropdown-menu {
+    position: absolute;
+    margin: 2%;
+    width: 37%;
+    height: 6vh;
+    background-color: white;
+    color: green;
+    font-size: 1.5rem;
+    cursor: grab;
+    box-shadow: 2.5px -2.5px grey;
+}
+
+.dropdown {
+    padding: 1%;
+}
+
+.dropdown:hover {
+    background-color: rgb(248, 248, 182);
 }
 
 .msg-sent {
