--- a/client/styles.css
+++ b/client/styles.css
@@ -106,6 +106,7 @@
 }
 
 .member {
+    position: relative;
     width: 98%;
     display: flex;
     justify-content: flex-start;
@@ -136,6 +137,51 @@
     color: #352323;
     text-shadow: 0.5px 0.5px #b79e9e;
     border-radius: 10px;
+}
+
+.dropdown-menu {
+    position: absolute;
+    margin: 2%;
+    width: 65%;
+    background-color: white;
+    color: green;
+    font-size: 1.5rem;
+    cursor: grab;
+    box-shadow: 2.5px -2.5px grey;
+    z-index: 20;
+}
+
+.dropdown {
+    padding: 1%;
+}
+
+.dropdown:hover {
+    background-color: rgb(248, 248, 182);
+}
+
+.icon-menu {
+    position: absolute;
+    right: 15px;
+    top: 6px;
+    visibility: hidden;
+    z-index: 20;
+    cursor:grabbing;
+}
+
+.hide {
+    visibility: hidden;
+
+}
+
+.show {
+    visibility: visible;
+}
+
+.icon-menu > div {
+    width: 3vw;
+    height: 0.5vh;
+    background-color: black;
+    margin: 6px 0;
 }
 
 
