--- a/client/messages/messages.css
+++ b/client/messages/messages.css
@@ -69,11 +69,11 @@
 
 .phone_screen_msg::-webkit-scrollbar {
     display: none;
-  }
+}
 
-  .phone_screen::-webkit-scrollbar {
+.phone_screen::-webkit-scrollbar {
     display: none;
-  }
+}
 
 .phone_screen::before {
     content: "";
@@ -87,15 +87,8 @@
     clip-path: polygon(70% 0, 100% 0%, 100% 100%, 30% 100%);
 }
 
-.phone_button {
-    width: 1.5rem;
-    height: 1.5rem;
-    border: 2px solid var(--black4);
-    border-radius: 50%;
-    margin: 1rem auto;
-}
 .member {
-    width: 100%;
+    /* width: 100%; */
     display: flex;
     justify-content: end;
     background-color: rgb(7, 169, 245);
@@ -110,7 +103,7 @@
     width: 2rem;
     margin: 0.6rem;
     margin-right: 3.5rem;
-
+    
 }
 
 .name-in-list {
@@ -119,6 +112,7 @@
     text-shadow: 0.5px 0.5px #96a50a;
     border-radius: 10px;
 }
+
 
 .msg {
     width: 50%;
@@ -141,6 +135,7 @@
     cursor: grab;
     box-shadow: 2.5px -2.5px grey;
     z-index: 20;
+    /* visibility: hidden; */
 }
 
 .dropdown {
@@ -183,20 +178,6 @@
     margin-left: 8%;
 }
 
-.writer-box {
-    position: inherit;
-    bottom: -0.3rem;
-    width: 26rem;
-    background-color: gray;
-    height: 8rem;
-    line-height: 13;
-    display: flex;
-}
-
-.writer {
-    margin: 4%;
-    border: solid 2px rgb(7, 169, 245);
-}
 
 .icon-menu {
     position: absolute;
@@ -208,21 +189,20 @@
 
 .description {
     position: absolute;
-    right: 3rem;
-    top: 2rem;
+    bottom: 1rem;
     background-color: rgb(238, 238, 55);
     color: green;
     font-size: 1.5rem;
-    cursor: grab;
     box-shadow: 2.5px -2.5px grey;
     z-index: 20;
     line-height: 1.5;
+    width: max-content;
     visibility: hidden;
 }
 
 .hide {
     visibility: hidden;
-
+    
 }
 
 .show {
@@ -242,9 +222,11 @@
     width: 5rem;
     height: 5.9rem;
     background-color: white;
+    position: relative;
 }
 
 .icon-send {
+    position: relative;
     height: 2rem;
     margin: 10%;
     background-size: cover;
@@ -258,20 +240,47 @@
     border: solid 1px rgb(7, 169, 245);
 }
 
-.log-out {
-    position: absolute;
-    top: 46.7rem;
-    right: 19rem;
-    width: 2rem;
+.writer-box {
+    position: inherit;
+    bottom: -1.3rem;
+    width: 26rem;
+    background-color: gray;
+    height: 8rem;
+    line-height: 13;
+    display: flex;
 }
 
-.back {
-    position: absolute;
-    right: 0;
-    width: 2.5rem;
-    background: rgba(230, 225, 225, 0.3);
-    font-size: 2rem;
-    color: blueviolet;
-    font-weight: 900;
-    z-index: 100;
+.writer {
+    margin: 4%;
+    border: solid 2px rgb(7, 169, 245);
+}
+
+.phone-buttons {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 0.5rem;
+}
+
+.log-out {
+    width: 1.6rem;
+    height: 1.6rem;
+    background-size: cover;
+    background-clip: unset;
+    background-repeat: round;
+    color: black;
+}
+
+.phone_button {
+    width: 1.5rem;
+    height: 1.5rem;
+    border: 2px solid var(--black4);
+    border-radius: 50%;
+}
+
+.btn {
+    position: relative;
+}
+
+.btn:active {
+    border-style: inset;
 }
