--- a/client/login/login.css
+++ b/client/login/login.css
@@ -63,7 +63,7 @@
     position: relative;
     flex: 1 0 auto;
     background-color: var(--black4);
-    max-height: 85vh !important;
+    height: 37.1rem !important;
     overflow: scroll;
 }
 
@@ -116,13 +116,58 @@
     color: #dc3545;
 }
 
+.description {
+    position: absolute;
+    bottom: 1rem;
+    background-color: rgb(238, 238, 55);
+    color: green;
+    font-size: 1.5rem;
+    box-shadow: 2.5px -2.5px grey;
+    z-index: 20;
+    line-height: 1.5;
+    width: max-content;
+    visibility: hidden;
+}
+
+.hide {
+    visibility: hidden;
+    
+}
+
+.show {
+    visibility: visible;
+}
+
+.phone-buttons {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 0.5rem;
+}
+
+.log-out {
+    width: 1.6rem;
+    height: 1.6rem;
+    background-size: cover;
+    background-clip: unset;
+    background-repeat: round;
+    color: black;
+}
+
 .phone_button {
     width: 1.5rem;
     height: 1.5rem;
     border: 2px solid var(--black4);
     border-radius: 50%;
-    margin: 1rem auto;
 }
+
+.btn {
+    position: relative;
+}
+
+.btn:active {
+    border-style: inset;
+}
+
 
 form {
     /* Center the form on the page */
