--- a/client/styles.css
+++ b/client/styles.css
@@ -117,11 +117,10 @@
     
 }
 
-.member img {
-    width: 2rem;
-    margin: 0.6rem;
+.profile {
+    width: 4rem;
+    margin: 0.2rem;
     margin-right: 1.5rem;
-
 }
 
 .name-in-list {
@@ -158,6 +157,13 @@
     visibility: hidden;
     z-index: 20;
     cursor:grabbing;
+}
+
+.icon-menu > div {
+    width: 3vw;
+    height: 0.3vh;
+    background-color: black;
+    margin: 6px 0;
 }
 
 .description {
